2010-10-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gimage.R: moved code into svalue<- method. Fix bug if no image
	initially specified.

2010-10-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R: fixed bug in svalue (doubled up); svalue<- implemented
	(index=TRUE needed)

2010-10-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added use.togglebutton feature

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.populateTable): fix to single column tables to
	avoid splitting on , or +

	* R/aaaGenerics.R: fixed focus<- method for tkwin

2010-10-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (ladd): changed what is shown after text is added. Now
	moves to top, not bottom

	* R/aaaGenerics.R: fixed error with fill argument to add method
	for containers.

2010-09-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: bug fix for closebuttons=TRUE

	* R/gpanedgroup.R: bug fix in svalue() method

2010-08-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gnotebook.R: added [ method to get children


2010-08-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcalendar.R: added calendar selector

2010-07-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (.treeColWidths): added svalue<- method to set by index

2010-07-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R: fix so that [ method can be used to retrieve widget
	at i,j

2010-07-24  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaHandlers.R: reimplemented this so that block/unblock work;
	others work as advertised, fix bug along the way

2010-07-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtable.R (.computeWidths): Trying to fix size of table object

2010-07-05  john verzani  <verzani@john-verzanis-macbook-pro.local>
