@@ -206,8 +206,11 @@ a \code{ggroup} container may be used.  \cr
 
 \code{gtable()} This is built on the underlying tree widget. It is not
 ideal, but avoids needing to have a separate library (eg. Tktable)
-installed.  
-\cr
+installed.  If the hidden argument \code{round} is passed to the
+constructor, this will be passed to the \code{format} function's
+\code{digits} argument when formatting numeric values for display.
+
+  \cr
 
 Sizing is an issue. There may be a bug in the widget regarding
 horizontal scrolling (for Mac OS X anyways, where this is being
